src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>AestCtr - Lead Process</fullName>
        <description>Lead process for Aesthetics Centers</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cold</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Pending Eval</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Best_Time_to_Contact__c</fullName>
        <label>Best Time to Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Lead_Status_History__c.Current__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lead_Status_History__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_in_Current_Status__c</fullName>
        <formula>Current_Status__r.Days_in_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Preferred_Service__c</fullName>
        <label>Patient Preferred Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cool Sculpting - Abdomen</fullName>
                </value>
                <value>
                    <fullName>Botox</fullName>
                </value>
                <value>
                    <fullName>Chemical Peels</fullName>
                </value>
                <value>
                    <fullName>Facial</fullName>
                </value>
                <value>
                    <fullName>Laser Hair Removal</fullName>
                </value>
                <value>
                    <fullName>Microneedling</fullName>
                </value>
                <value>
                    <fullName>Restylane Kysse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Returning_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Returning Patient</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>HealthCloudGA__Priority__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>My Open Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Aesthetics_Center_Lead</fullName>
        <active>true</active>
        <businessProcess>AestCtr - Lead Process</businessProcess>
        <label>Aesthetics Center - Lead</label>
    </recordTypes>
</CustomObject>